--- a/Praesidium/Praesidium/Views/Home/Index.cshtml
+++ b/Praesidium/Praesidium/Views/Home/Index.cshtml
@@ -22,8 +22,7 @@
                 <p>
                     Learn More About Trafficking Here!
                 </p>
-                <p id="carousel_btn" 
-                   class= "btn btn-danger btn-group-lg">Read More</a></p>
+                <p id="carousel_btn"><a class= "btn btn-danger btn-group-lg">Read More</a></p>
             </div>
         </div>
         <div class="item">
