--- a/Praesidium/Praesidium/Views/Admin/Files.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/Files.cshtml
@@ -12,6 +12,9 @@
 </p>
 <table class="table">
     <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.Title)
+        </th>
         <th style="width: 20%;">
             @Html.DisplayNameFor(model => model.FileName)
         </th>
@@ -39,21 +42,24 @@
 @foreach (var item in Model) {
     <tr>
         <td>
+            @Html.DisplayFor(modelItem => item.Title)
+        </td>
+        <td>
             @Html.DisplayFor(modelItem => item.FileName)
         </td>
         <td>
-            @Html.ActionLink("Download","File","Download",new { id=item.RecId},null)
-            <br />
-            <a class="iframe" href="https://docs.google.com/gview?url=@Url.Action("File","Download",new { id=item.RecId},Request.Url.Scheme)">View</a>
+            @Html.ActionLink("Download", "File", "Download", new {id = item.RecId}, null)
+            <br/>
+            <a class="iframe" href="https://docs.google.com/gview?url=@Url.Action("File", "Download", new {id = item.RecId}, Request.Url.Scheme)">View</a>
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Description).ToString().Substring(0,25)
+            @Html.DisplayFor(modelItem => item.Description).ToString().Substring(0, 25)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.ShUser1.Username)
         </td>
         <td
-            >@Html.DisplayFor(modelItem => item.DateUploaded)
+        >@Html.DisplayFor(modelItem => item.DateUploaded)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.ModifiedBy)
@@ -62,9 +68,9 @@
             @Html.DisplayFor(modelItem => item.DateModified)
         </td>
         <td>
-            @Html.ActionLink("Edit", "FilesEdit", new { id=item.RecId }) |
+            @Html.ActionLink("Edit", "FilesEdit", new {id = item.RecId}) |
             @*@Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |*@
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+            @Html.ActionLink("Delete", "Delete", new {/* id=item.PrimaryKey */})
         </td>
     </tr>
 }
