--- a/Praesidium/Praesidium/Views/Admin/Index.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/Index.cshtml
@@ -11,7 +11,7 @@
 
 
 
-
+<body>
 <!-- Info boxes -->
 <section id="auth-button"></section>
 <section id="view-selector"></section>
@@ -21,4 +21,4 @@
 <script src="~/Scripts/AdminLTE/googleApiAuth.js"></script>
 
 <script src="~/Scripts/AdminLTE/analyticsDisplay.js"></script>
-
+</body>
