--- a/Praesidium/Praesidium/Views/CyberSecurity/Index.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Index.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Cyber Security Page";
 }
 
-<div class="container">
+<div class="container" style="margin-top:-15px;">
     <div class="jumbotron" id="cyber_sec_jumbo">
     </div>
 </div>
@@ -32,7 +32,7 @@
                 <li>Don't accept files or send files to strangers</li>
                 <li>If you are uncomforatble at all tell a trusted adult.</li>
             </ul>
-            <a href="#" style="margin-left:95px;" class="btn btn-warning bt-md ">Check out the Article!</a></ br></ br>
+            <a href="#" style="margin-left:95px;margin-bottom:10px;" class="btn btn-warning bt-md ">Check out the Article!</a></ br></ br>
             </div>
         
         <div class="col-md-8">
