--- a/Praesidium/Praesidium/Views/CyberSecurity/Resources.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Resources.cshtml
@@ -3,36 +3,30 @@
     ViewBag.Title = "Resources";
 }
 
+<img src="~/Content/Images/pic4.png" style="height:300px; width:100%;border-radius:22px 22px 22px 22px; margin-top:-15px;" />
 <div class="row">
     <div class="col-md-8">
-
-        <p class="h2" style="text-align:center; color:slategray"><strong>Resource Help</strong></p><br /><br />
-        <p>
+        <h2 id="headers"><strong>Resource Help</strong></h2>
+        <p id="p_text">
             Below are link and pages on how these resources will help Adults, Teachers, Teen, and Youth with Cyber Security.
+            These resources will hopefully provide a more in depth analysis of cyber security concerns and steps that may be taken
+            to ensure that you are able to remain safe while surfing the web.
         </p>
-        <img src="~/Content/Images/cs_cloud.png" style="height:300px; width:400px" />
-
-        <br />  <br/> 
     </div>
 
-   
-
-    <div class="col-md-4 align-center ">
-        
-        <p class="h3" style="text-align:center;color:slategray;padding-top:25%;"><strong>Most Viewed Links</strong></p>
-        <ul class="align-left">
+    <div class="col-md-4 align-center" id="borders">     
+        <h3 id="headers_borders"><strong>Most Viewed Links</strong></h3>
+        <ul class="align-left" id="p_textborders">
             <li><A HREF="http://praesidium.azurewebsites.net">Website1</A></li>
             <li><A HREF="http://praesidium.azurewebsites.net">Website2</A></li>
             <li><A HREF="http://praesidium.azurewebsites.net">Website3</A></li>
         </ul>
-
     </div>
-</br>
 
-<div class="col-md-8">
-    <p class="h2" style="text-align:center; color:slategray"><strong>Top Cyber Security Resources</strong></p><br />
+<div class="col-md-8 well">
+    <h2 id="headers"><strong>Top Cyber Security Resources</strong></h2>
     <div class="col-md-8">
-        <ul>
+        <ul id="p_text">
             <li><a href="https://heimdalsecurity.com/blog/cyber-security-tips/">131 Cyber Security Tips that Anyone Can Apply</a></li>
             <li>Website2</li>
             <li>Website3</li>
@@ -44,7 +38,6 @@
             <li>Website9</li>
             <li>Website10</li>
         </ul>
-
     </div>
 </div>
 </div>
