--- a/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
+++ b/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
 
 
     <div class="whitespace">
-        <div class="row" style="margin-top:6px; font-size:120%;margin-left:5%;">
+        <div class="row" style="margin-top:6px; font-size:120%;margin-left:5%;margin-right:5%;">
             <a href="tel:1888373788888" style="color:grey;margin-bottom:20%;"><span class="glyphicon glyphicon-phone-alt" style="color:dodgerblue;"></span>  National Human Trafficking Hotline <strong style="color:dodgerblue">1(888)373-7888</strong></a>
         </div>
 
