--- a/Praesidium/Praesidium/Views/Admin/Index.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/Index.cshtml
@@ -9,16 +9,68 @@
     });
 }
 
-
+<meta name="google-signin-client_id" content="613515265029-spkbodid2knrbh0c18930nt77db4aodp.apps.googleusercontent.com">
+<meta name="google-signin-scope" content="https://www.googleapis.com/auth/analytics.readonly">
 
 <body>
-<!-- Info boxes -->
+    <h1>Hello Analytics Reporting API V4</h1>
+
+    <p>
+        <!-- The Sign-in button. This will run `queryReports()` on success. -->
+        <div class="g-signin2" data-onsuccess="queryReports"></div>
+    </p>
+
+    <!-- The API response will be printed here. -->
+    <textarea cols="80" rows="20" id="query-output"></textarea>
+
+    <script>
+  // Replace with your view ID.
+  var VIEW_ID = '<REPLACE_WITH_VIEW_ID>';
+
+  // Query the API and print the results to the page.
+  function queryReports() {
+    gapi.client.request({
+      path: '/v4/reports:batchGet',
+      root: 'https://analyticsreporting.googleapis.com/',
+      method: 'POST',
+      body: {
+        reportRequests: [
+          {
+            viewId: VIEW_ID,
+            dateRanges: [
+              {
+                startDate: '7daysAgo',
+                endDate: 'today'
+              }
+            ],
+            metrics: [
+              {
+                expression: 'ga:sessions'
+              }
+            ]
+          }
+        ]
+      }
+    }).then(displayResults, console.error.bind(console));
+  }
+
+  function displayResults(response) {
+    var formattedJson = JSON.stringify(response.result, null, 2);
+    document.getElementById('query-output').value = formattedJson;
+  }
+    </script>
+
+    <!-- Load the JavaScript API client and Sign-in library. -->
+    <script src="https://apis.google.com/js/client:platform.js"></script>
+
+<!-- Info boxes 
 <section id="auth-button"></section>
 <section id="view-selector"></section>
 <section id="timeline"></section>
-
-<!-- Step 2: Load the library. -->
+    -->
+<!-- Step 2: Load the library. 
 <script src="~/Scripts/AdminLTE/googleApiAuth.js"></script>
 
 <script src="~/Scripts/AdminLTE/analyticsDisplay.js"></script>
+    -->
 </body>
