Testing new view. Possible problem with other one.

--- a/Praesidium/Praesidium/Views/Admin/Index.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/Index.cshtml
@@ -13,7 +13,7 @@
 <meta name="google-signin-scope" content="https://www.googleapis.com/auth/analytics.readonly">
 
 <body>
-    <h1>Hello Analytics Reporting API V4</h1>
+   
 
     <p>
         <!-- The Sign-in button. This will run `queryReports()` on success. -->
@@ -25,7 +25,7 @@
 
     <script>
   // Replace with your view ID.
-  var VIEW_ID = '<REPLACE_WITH_VIEW_ID>';
+        var VIEW_ID = 143138137;
 
   // Query the API and print the results to the page.
   function queryReports() {
