--- a/Praesidium/Praesidium/Views/trafficking/Teachers.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/Teachers.cshtml
@@ -33,10 +33,12 @@
             <div class="col-md-12">
                 <h1>Teachers</h1>
                 <p class="lead">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum
-                    bibendum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum
-                    bibendum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum
-                    bibendum. Aliquam erat volutpat. Nunc massa felis, ullamcorper et vehicula ac, malesuada sit amet magna. Proin ac dolor nec.
+                    Teachers are some of the most influential people on today’s youth. Kids spend a majority of their time at
+                    school, in the early parts of their life. These young kids are also the most vulnerable to human trafficking
+                    because they do not know any better and they physically cannot do much against an attacker. Because
+                    of this, it is so important for teachers to be fully aware of the dangers of human trafficking and the signs
+                    of a possible attack, in order to educate our youth. This page contains information and resources that
+                    will give content to our educators so that they can learn and pass on the information to their students.
                 </p>
             </div>
         </div>
@@ -45,9 +47,9 @@
 
             <div class="col-md-4 col-sm-8 teen_res">
                 <a href="#" class="thumbnail"><img src="~/Content/Images/test2.jpg" /></a>
-                <h2>Resource 1</h2>
-                <p> Aliquam erat volutpat. Nunc massa felis, ullamcorper et vehicula ac, malesuada sit amet magna. Proin ac dolor nec.</p>
-                <span class="btn btn-primary btn-lg">Check it out!</span>
+                <h2>Resources for Teachers</h2>
+                <p> This is a blog that has a lot of resources right at your fingertips</p>
+                <a class="btn btn-primary btn-lg" href="https://worldpittsburgh.wordpress.com/2014/02/28/human-trafficking-resources-for-teachers-and-students/">Check it out!</a>
             </div>
 
             <div class="col-md-4 col-sm-8 teen_res">
