--- a/Praesidium/Praesidium/Views/trafficking/WarningSigns.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/WarningSigns.cshtml
@@ -3,5 +3,19 @@
     ViewBag.Title = "WarningSigns";
 }
 
-<h2>Know The Warning Signs!</h2>
+<div class="container-fluid" id="photo_cont" style="margin-bottom:3%;min-height:300px;margin-top:-20px;">
+<div class="row">
+    <div class="col-md-12">
+        <figure class="effect-caged">
+            <img src="~/Content/Images/caution.jpg" style="width:100%;max-height:330px;" />
+        </figure>
+    </div>
+</div>
+</div>
 
+<h2 id="headers" class="align-left">Know the Warning Signs!</h2>
+
+<p id="p_text"> This page is for everyone to be aware of human trafficking warning signs. 
+    It will also help everyone be aware when human trafficking is taking place as well as other being involved in human trafficking.
+    
+</p>
