Bullet points added

--- a/Praesidium/Praesidium/Views/trafficking/WarningSigns.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/WarningSigns.cshtml
@@ -17,5 +17,28 @@
 
 <p id="p_text"> This page is for everyone to be aware of human trafficking warning signs. 
     It will also help everyone be aware when human trafficking is taking place as well as other being involved in human trafficking.
-    
 </p>
+
+<h3>Red Flags of a Victim</h3>
+<ul>
+    <li>Poor physical health or malnourishment</li>
+    <li>Injuries of abuse</li>
+    <li>Tattoos or brands on the neck or lower back</li>
+    <li>Lack of Identification</li>
+    <li>Lack of personal possessions</li>
+    <li>Living at place of employment</li>
+    <li>Works excessively long or unusual hours</li>
+    <li>Inconsistency in their information or scripted communication (such as age, place of birth, and family life)</li>
+    <li>Suffers from substance abuse problems or has psychological disorders</li>
+    <li>Sudden presence of an older boyfriend </li>
+    <li>Signs of gang affiliation</li>
+    <li>Submissive behavior</li>
+</ul>
+
+<h3>Common Situations</h3>
+<ul>
+    <li>Not allowing people to go into public alone, or speak for themselves</li>
+    <li>Detached from majority of family members and friends</li>
+    <li>Security measures that appear to keep people inside an establishment, such as barbed wired fences, or bar covered windows</li>
+    <li>Children working in restaurants, bars, hotels, or agricultural work</li>
+</ul>
