--- a/Praesidium/Praesidium/Views/trafficking/Teachers.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/Teachers.cshtml
@@ -11,8 +11,8 @@
             <figure class="effect-caged">
 
 
-               
-                <img src="~/Content/Images/teacher.png"  g" style="width:100%;max-height:330px;" />
+
+                <img src="~/Content/Images/teacher.png" g" style="width:100%;max-height:330px;" />
                 <figcaption>
                     <h1> <span>Teachers</span></h1>
                 </figcaption>
@@ -42,31 +42,25 @@
                 </p>
             </div>
         </div>
-
-        <div class="row">
-
-            <div class="col-md-4 col-sm-8 teen_res">
-                <a href="#" class="thumbnail"><img src="~/Content/Images/test2.jpg" /></a>
-                <h2>Resources for Teachers</h2>
-                <p> This is a blog that has a lot of resources right at your fingertips</p>
-                <a class="btn btn-primary btn-lg" href="https://worldpittsburgh.wordpress.com/2014/02/28/human-trafficking-resources-for-teachers-and-students/">Check it out!</a>
-            </div>
-
-            <div class="col-md-4 col-sm-8 teen_res">
-                <a href="#" class="thumbnail"><img src="~/Content/Images/test2.jpg" /></a>
-                <h2>Resource 2</h2>
-                <p> Aliquam erat volutpat. Nunc massa felis, ullamcorper et vehicula ac, malesuada sit amet magna. Proin ac dolor nec. </p>
-                <span class="btn btn-danger btn-lg">Check it out!</span>
-            </div>
-
-            <div class="col-md-4 col-sm-8 teen_res">
-                <a href="#" class="thumbnail"><img src="~/Content/Images/test2.jpg" /></a>
-                <h2>Resource 3</h2>
-                <p> Aliquam erat volutpat. Nunc massa felis, ullamcorper et vehicula ac, malesuada sit amet magna. Proin ac dolor nec.</p>
-                <span class="btn btn-success btn-lg">Check it out!</span>
-            </div>
-
-        </div>
     </div>
 </div>
+
+
+@if (Model != null)
+{
+    foreach (var file in Model)
+    {
+        <div class="row">
+            <div class="col-md-8">
+                <div class="well">
+                    <h2 style="color:slategrey;text-align:center;"><strong>@file.Title</strong></h2>
+                    <p id="p_text">
+                        @WebUtility.HtmlDecode(file.Description)
+                    </p>
+                    <button class="btn btn-md btn-success align-center" style="margin-left:42%;">View File</button>
+                </div>
+            </div>
+        </div>
+    }
+}
 
