--- a/Praesidium/Praesidium/Views/trafficking/Adults.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/Adults.cshtml
@@ -62,4 +62,20 @@
         </div>
     </div>
 </div>
-
+@if (Model != null)
+{
+    foreach (var file in Model)
+    {
+        <div class="row">
+            <div class="col-md-8">
+                <div class="well">
+                    <h2 style="color:slategrey;text-align:center;"><strong>@file.Title</strong></h2>
+                    <p id="p_text">
+                        @HttpUtility.HtmlDecode(file.Description)
+                    </p>
+                    <button class="btn btn-md btn-success align-center" style="margin-left:42%;">View File</button>
+                </div>
+            </div>
+        </div>
+    }
+}
