--- a/Praesidium/Praesidium/Content/Site.css
+++ b/Praesidium/Praesidium/Content/Site.css
@@ -102,7 +102,7 @@ footer {
 
 
     .navbar-inverse .navbar-nav > li > a {
-        color: #fff;
+        color: #3c8dbc;
     }
 
 /*@media (min-width: 1200px) {
@@ -317,7 +317,7 @@ box-shadow:2px 2px 4px rgba(0,0,0,0.8);
    width:100%;
    overflow: hidden;
    min-height:375px;
-   
+   margin-top:15px;
     
 }
 
