--- a/Praesidium/Praesidium/Content/Site.css
+++ b/Praesidium/Praesidium/Content/Site.css
@@ -102,7 +102,11 @@ footer {
 
 
     .navbar-inverse .navbar-nav > li > a {
-        color: #3c8dbc;
+        color: #fff;
+    }
+
+	.navbar-inverse .navbar-nav > li > a :after {
+        color: #fff;
     }
 
 /*@media (min-width: 1200px) {
@@ -317,7 +321,7 @@ box-shadow:2px 2px 4px rgba(0,0,0,0.8);
    width:100%;
    overflow: hidden;
    min-height:375px;
-   margin-top:15px;
+   margin-top:25px;
     
 }
 
@@ -457,6 +461,7 @@ text-shadow:  #333333 0.1em 0.1em 0.2em;
     -webkit-animation: fill 1s forwards;
     -moz-animation: fill 1s forwards;
     opacity: 1;
+	background-color:#fff;
 }
 /* /nav edits*/
 
