edits and comments

--- a/Praesidium/Praesidium/Content/Site.css
+++ b/Praesidium/Praesidium/Content/Site.css
@@ -30,6 +30,8 @@ textarea {
     max-width: 280px;
 }
 
+/* exit button CSS */
+
 #get-away {
     position: fixed;
     bottom: 10px;
@@ -43,6 +45,7 @@ textarea {
     border-radius: 5px;
 }
 
+/* footer Css */
 
 footer {
     display: block;
@@ -59,28 +62,7 @@ footer {
     padding-top: 160px !important;
 }
 
-.navbar-fixed-top {
-    top: 30px;
-}
-
-.navbar-inverse  {
-    height: 78px !important;
-    background-color: #3c8dbc;
-    border-color: #3c8dbc;
-    width: 100%;
-    margin: auto;
-    font-weight: bold;
-}
-
-
-.navbar-nav {
-    background-color: #3c8dbc;
-    border-color: #3c8dbc;
-    /*border-radius: 15px;*/
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-}
-
+/* Search bar CSS */
 
 .searchAreasm {
     padding-left:5px;
@@ -88,33 +70,13 @@ footer {
     padding-right:5px;
 }
 
-    .navbar-inverse .navbar-brand {
-        height: 70px;
-        color: #fff;
-        margin-left:-20px;
-    }
-
-    .navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
-        border-color: #101010;
-        /*padding-top: 15px;*/
-    }
-
-
-
-    .navbar-inverse .navbar-nav > li > a {
-        color: #fff;
-    }
-
-	.navbar-inverse .navbar-nav > li > a :after {
-        color: #fff;
-    }
-
 /*@media (min-width: 1200px) {
     .container {
         padding-top: 6px;
     }
 }*/
 
+/* white space css */
 .whitespace {
     background-color: #ecf0f5;
     height: 90px;
@@ -124,20 +86,20 @@ footer {
     z-index: 20;
 }
 
-
+/* contributer? */
 
 .Contributer {
     text-align: left;
 }
 
-/*Glyphicon styling*/
-.logo {
+  
+/*cyber security glyphicon table styling*/ 
+ 
+ .logo {
    color: #f4511e;
    font-size: 200px;
    padding-left: 15%;
        }
-  
-/*glyphicon table styling*/ 
 
   .logo-table {
       color: #f4511e;
@@ -230,7 +192,7 @@ footer {
 }
 
 
-/* CSS for trafficking photo & effect*/
+/* CSS for movement effect photos*/
 
 figure.effect-caged figcaption::before {
 	position: absolute;
@@ -294,7 +256,7 @@ figure.effect-caged:hover p {
   
 }
 
-/* CSS for jumbotron on contact page */
+/* CSS for jumbotrons */
 
  #Contact_jumbo{
     box-shadow:1px 1px 4px rgba(0,0,0,0.5);
@@ -312,22 +274,21 @@ figure.effect-caged:hover p {
     padding:10px 40px;
 }
 
-/* adjust the edges of carousel trafficking image*/
+/* carousel CSS*/
 
 #carousel-example-generic{
-
 box-shadow:2px 2px 4px rgba(0,0,0,0.8);
    border-radius: 22px 22px 22px 22px;
    width:100%;
    overflow: hidden;
    min-height:375px;
-   margin-top:25px;
+   padding-top:20px;
     
 }
 
 #carousel_img{
 
- border-radius: 22px 22px 22px 22px;
+   border-radius: 22px 22px 22px 22px;
    overflow: hidden;
    min-height:375px;
     width:100%;
@@ -348,7 +309,7 @@ box-shadow:2px 2px 4px rgba(0,0,0,0.8);
 
 }
 
-/* Start CSS for Teen Page*/
+/* CSS for Teen Page*/
 
 .center {
   margin: 0 auto;
@@ -388,9 +349,11 @@ color:white;
 text-shadow:  #333333 0.1em 0.1em 0.2em;
 }
 
+
+/* Drop down nav items */
+
 .dropdown {
     height: 50px;
-   
 }
 
 .dropdown > a:hover {
@@ -417,7 +380,7 @@ text-shadow:  #333333 0.1em 0.1em 0.2em;
 }
 
 .dropdown-menu > li > a:hover:after {
-    background-color: rgba(0,60,128,0.82) !important;
+    background-color:  rgba(0,60,128,0.82) !important;
 }
 
 .dropdown-menu > li :hover {
@@ -429,7 +392,8 @@ text-shadow:  #333333 0.1em 0.1em 0.2em;
     border-bottom-color: rgba(0,60,128,0.82);
 }
 
-/* Nav edits*/
+/* Nav item list */
+
 .navbar-nav > li > a:hover {
     background-color: rgba(0,60,128,0.82) !important;
      position: relative;
@@ -463,8 +427,6 @@ text-shadow:  #333333 0.1em 0.1em 0.2em;
     opacity: 1;
 	background-color:#fff;
 }
-/* /nav edits*/
-
 
 .navbar-header {
     margin-top: 0 !important;
@@ -476,7 +438,50 @@ text-shadow:  #333333 0.1em 0.1em 0.2em;
     background-color: #3c8dbc !important;
     padding-top: 20px;  
 }
-/* Reverted Edits*/
+.navbar-inverse .navbar-brand {
+        height: 70px;
+        color: #fff;
+        margin-left:-20px;
+    }
+
+    .navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
+        border-color: #101010;
+        /*padding-top: 15px;*/
+    }
+
+
+
+    .navbar-inverse .navbar-nav > li > a {
+        color: #fff;
+    }
+
+	.navbar-inverse .navbar-nav > li > a :after {
+        color: #fff;
+    }
+	
+	.navbar-fixed-top {
+    top: 30px;
+}
+
+.navbar-inverse  {
+    height: 78px !important;
+    background-color: #3c8dbc;
+    border-color: #3c8dbc;
+    width: 100%;
+    margin: auto;
+    font-weight: bold;
+}
+
+
+.navbar-nav {
+    background-color: #3c8dbc;
+    border-color: #3c8dbc;
+    /*border-radius: 15px;*/
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+/* Text congruency*/
 
 #headers{
  font-size:32px;
