--- a/Praesidium/Praesidium/Views/Shared/_Navigation.cshtml
+++ b/Praesidium/Praesidium/Views/Shared/_Navigation.cshtml
@@ -24,10 +24,10 @@
             {
             <li class="dropdown">
                 @*@Html.ActionLink("" + navItem.DisplayText + "<b class='caret'></b>" , navItem.Action, navItem.Controller, new Dictionary<string, object> { { "class", "dropdown-toggle" }, { "data-toggle", "dropdown" } })*@
-                <button class="btn dropdown-toggle" type="button" data-toggle="dropdown" href="@Url.Action(navItem.Action, navItem.Controller)">
+                <a href="@Url.Action(navItem.Action, navItem.Controller)">
                     @navItem.DisplayText
                     <span class="caret" aria-hidden="true"></span>                    
-                </button>
+                </a>
                 <ul class="dropdown-menu">
                     @foreach (var subNav in navItem.SubPages)
                     {
