--- a/Praesidium/Praesidium/Content/Site.css
+++ b/Praesidium/Praesidium/Content/Site.css
@@ -351,9 +351,15 @@ text-shadow:  #333333 0.1em 0.1em 0.2em;
 
 
 /* Drop down nav items */
+.dropdown {
 
+	background-color: background-color: #3c8dbc;
+
+}
 
 /* Nav item list */
+
+
 
 .navbar-nav > li > a:hover {
     background-color: rgba(0,60,128,0.82) !important;
