--- a/Praesidium/Praesidium/Views/Shared/_Navigation.cshtml
+++ b/Praesidium/Praesidium/Views/Shared/_Navigation.cshtml
@@ -24,7 +24,7 @@
             {
             <li class="dropdown">
                 @*@Html.ActionLink("" + navItem.DisplayText + "<b class='caret'></b>" , navItem.Action, navItem.Controller, new Dictionary<string, object> { { "class", "dropdown-toggle" }, { "data-toggle", "dropdown" } })*@
-                <a href="@Url.Action(navItem.Action, navItem.Controller)">
+                <a class="dropdown_btn" href="@Url.Action(navItem.Action, navItem.Controller)">
                     @navItem.DisplayText
                     <span class="caret" aria-hidden="true"></span>                    
                 </a>
