--- a/Praesidium/Praesidium/Content/Site.css
+++ b/Praesidium/Praesidium/Content/Site.css
@@ -353,9 +353,16 @@ text-shadow:  #333333 0.1em 0.1em 0.2em;
 /* Drop down nav items */
 .dropdown {
 	background-color: background-color: #3c8dbc;
+	position:relative;
 }
 .dropdown_btn{
 	background-color: background-color: #3c8dbc;
+}
+
+.dropdown-menu > li > a {
+    font-weight: bold !important;
+    color: #fff;
+    background-color: rgba(0,60,128,0.82);
 }
 /* Nav item list */
 
