--- a/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
+++ b/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
@@ -49,8 +49,14 @@
                     @{
                         Html.RenderAction("NavigationItems", "Home");
                     }
-                    <li>                
-                            <input id="txtSearchlg" class="searchBar" type="text" style="width:150px;" placeholder="Keywords.." />                             
+                    <li>
+                        <a data-toggle="collapse" style="width:150px" href="#searchArea" aria-expanded="false" aria-controls="collapseExample">
+                            <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                            Search
+                        </a>
+                        <div class="searchArea accordion-body collapse" id="searchArea">
+                            <input id="txtSearchlg" class="searchBar" type="text" style="width:150px;" placeholder="Keywords.." />
+                        </div>             
                     </li>
 
                 </ul>
