--- a/Praesidium/Praesidium/Content/Site.css
+++ b/Praesidium/Praesidium/Content/Site.css
@@ -351,6 +351,7 @@ text-shadow:  #333333 0.1em 0.1em 0.2em;
 
 
 /* Drop down nav items */
+
 .dropdown {
 	background-color: background-color: #3c8dbc;
 	position:relative;
@@ -364,9 +365,14 @@ text-shadow:  #333333 0.1em 0.1em 0.2em;
     color: #fff;
     background-color: rgba(0,60,128,0.82);
 }
+.dropdown-menu {
+    background-color: rgba(0,60,128,0.82);
+    border: none;
+}
+
 /* Nav item list */
 
-.navbar-nav > li > a{
+.navbar-nav > li > a { 
 background-color: background-color: #3c8dbc;
 }
 
