--- a/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
+++ b/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
                         Html.RenderAction("NavigationItems", "Home");
                     }
                     <li>
-                        <a data-toggle="collapse" style="width:150px; text-align:center;" href="#searchArea" aria-expanded="false" aria-controls="collapseExample">
+                        <a data-toggle="collapse" style="width:150px; text-align:center; margin-left:-3px;" href="#searchArea" aria-expanded="false" aria-controls="collapseExample">
                             <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
                             Search
                         </a>
