--- a/Praesidium/Praesidium/Content/Site.css
+++ b/Praesidium/Praesidium/Content/Site.css
@@ -356,16 +356,14 @@ text-shadow:  #333333 0.1em 0.1em 0.2em;
 	background-color: background-color: #3c8dbc;
 	position:relative;
 }
-.dropdown_btn{
-	background-color: background-color: #3c8dbc;
-}
+
 
 
 /* Nav item list */
 
 
-.navbar-nav > li > a { 
-background-color: background-color: #3c8dbc;
+.navbar-nav > li > a :active{ 
+ background-color: rgba(0,60,128,0.82) !important;
 }
 
 .navbar-nav > li > a:hover {
