--- a/Praesidium/Praesidium/Views/trafficking/Teachers.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/Teachers.cshtml
@@ -9,12 +9,9 @@
         <div class="col-md-12">
 
             <figure class="effect-caged">
-
-
-
                 <img src="~/Content/Images/teacher.png" g" style="width:100%;max-height:330px;" />
                 <figcaption>
-                    <h1> <span>Teachers</span></h1>
+                    <h1><span>Teachers</span></h1>
                 </figcaption>
             </figure>
 
@@ -31,8 +28,8 @@
 
         <div class="row">
             <div class="col-md-12">
-                <h1>Teachers</h1>
-                <p class="lead">
+                <h1 id=" headers">Teachers</h1>
+                <p class="lead" id="p_text">
                     Teachers are some of the most influential people on today’s youth. Kids spend a majority of their time at
                     school, in the early parts of their life. These young kids are also the most vulnerable to human trafficking
                     because they do not know any better and they physically cannot do much against an attacker. Because
