--- a/Praesidium/Praesidium/Views/trafficking/Youth.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/Youth.cshtml
@@ -8,12 +8,7 @@
 <div class="container-fluid" id="photo_cont" style="margin-bottom:3%;">
     <div class="row">
         <div class="col-md-12">
-
             <figure class="effect-caged">
-
-
-
-
                 <img src="~/Content/Images/pic4.png" style="width:100%;max-height:330px;" />
                 <figcaption>
                     <h1> <span>Youth</span></h1>
@@ -32,8 +27,8 @@
 
         <div class="row">
             <div class="col-md-12">
-                <h1>Youth</h1>
-                <p class="lead">
+                <h1 id="headers">Youth</h1>
+                <p class="lead" id="p_text">
                     Youth are some of the most vulnerable targets out there when it comes to human trafficking. Because of this, we must take extra precaution
                     in protecting our children and making sure they know how to protect themselves. This page will help do that.
                 </p>
