--- a/Praesidium/Praesidium/Content/Site.css
+++ b/Praesidium/Praesidium/Content/Site.css
@@ -206,6 +206,7 @@ figure.effect-caged figcaption::before {
 
 .photo_cont{
 box-shadow:1px 1px 4px rgba(0,0,0,0.8);
+padding-top:10px;
 }
 figure.effect-caged h1 {
 	position: absolute;
