--- a/Praesidium/Praesidium/Views/trafficking/Statistics.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/Statistics.cshtml
@@ -5,13 +5,9 @@
 <!-- Jumbotron -->
 
 <img src="~/Content/Images/Stop-Human-Trafficking.jpg" style="width:100%;max-height:330px;" />
-
 <div class="jumbotron">
-
-    <h1>Trafficking Statistics</h1>
-
+    <h1 id="headers">Trafficking Statistics</h1>
     <p></p>
-
 </div>
 
 <!-- Creates for all panels -->
