--- a/Praesidium/Praesidium/Views/CyberSecurity/Adults.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Adults.cshtml
@@ -2,7 +2,8 @@
 @{
     ViewBag.Title = "Adults";
 }
-<div class="container-fluid" id="photo_cont" style="margin-bottom:3%;min-height:300px;margin-top:-23px;">
+
+<div class="container-fluid" id="photo_cont" style="margin-bottom:3%;min-height:300px;">
     <div class="row">
         <div class="col-md-12">
             <figure class="effect-caged">
