--- a/Praesidium/Praesidium/Views/CyberSecurity/Index.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Index.cshtml
@@ -3,10 +3,8 @@
     ViewBag.Title = "Cyber Security Page";
 }
 
-<div class="container" style="margin-top:-15px;">
-    <div class="jumbotron" id="cyber_sec_jumbo">
-    </div>
-</div>
+
+    <div class="jumbotron" id="cyber_sec_jumbo"></div>
  
 
     <div class="row">
