--- a/Praesidium/Praesidium/Views/CyberSecurity/LawEnforcement.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/LawEnforcement.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="row">
-    <img src="~/Content/Images/cyber-crime.jpg" style="width: 100%; border-radius:22px 22px 22px 22px;margin-top:-15px;max-height:400px;" class="img-responsive" />
+    <img src="~/Content/Images/cyber-crime.jpg" style="width: 100%; border-radius:22px 22px 22px 22px;max-height:400px;" class="img-responsive" />
     <div class="col-md-10">
         <h2 id="headers"><strong>Law Enforcement's Role in Cyber Security</strong></h2>
         <p id="p_text">
