--- a/Praesidium/Praesidium/Views/CyberSecurity/Teen.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Teen.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Teen";
 }
 
-<div class="container-fluid" id="photo_cont" style="margin-bottom:3%;min-height:300px;margin-top:-40px;">
+<div class="container-fluid" id="photo_cont" style="margin-bottom:3%;min-height:300px;">
     <div class="row">
         <div class="col-md-12">
             <figure class="effect-caged">
