--- a/Praesidium/Praesidium/Views/Admin/Index.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/Index.cshtml
@@ -9,68 +9,77 @@
     });
 }
 
-<meta name="google-signin-client_id" content="613515265029-spkbodid2knrbh0c18930nt77db4aodp.apps.googleusercontent.com">
-<meta name="google-signin-scope" content="https://www.googleapis.com/auth/analytics.readonly">
+<script>
+(function(w,d,s,g,js,fs){
+  g=w.gapi||(w.gapi={});g.analytics={q:[],ready:function(f){this.q.push(f);}};
+  js=d.createElement(s);fs=d.getElementsByTagName(s)[0];
+  js.src='https://apis.google.com/js/platform.js';
+  fs.parentNode.insertBefore(js,fs);js.onload=function(){g.load('analytics');};
+}(window,document,'script'));
+</script>
 
-<body>
-   
+<script>
 
-    <p>
-        <!-- The Sign-in button. This will run `queryReports()` on success. -->
-        <div class="g-signin2" data-onsuccess="queryReports"></div>
-    </p>
+gapi.analytics.ready(function() {
 
-    <!-- The API response will be printed here. -->
-    <textarea cols="80" rows="20" id="query-output"></textarea>
+  /**
+   * Authorize the user immediately if the user has already granted access.
+   * If no access has been created, render an authorize button inside the
+   * element with the ID "embed-api-auth-container".
+   */
+  gapi.analytics.auth.authorize({
+    container: 'embed-api-auth-container',
+    clientid: 613515265029-spkbodid2knrbh0c18930nt77db4aodp.apps.googleusercontent.com
+  });
 
-    <script>
-  // Replace with your view ID.
-        var VIEW_ID = 143138137;
 
-  // Query the API and print the results to the page.
-  function queryReports() {
-    gapi.client.request({
-      path: '/v4/reports:batchGet',
-      root: 'https://analyticsreporting.googleapis.com/',
-      method: 'POST',
-      body: {
-        reportRequests: [
-          {
-            viewId: VIEW_ID,
-            dateRanges: [
-              {
-                startDate: '7daysAgo',
-                endDate: 'today'
-              }
-            ],
-            metrics: [
-              {
-                expression: 'ga:sessions'
-              }
-            ]
-          }
-        ]
+  /**
+   * Create a new ViewSelector instance to be rendered inside of an
+   * element with the id "view-selector-container".
+   */
+  var viewSelector = new gapi.analytics.ViewSelector({
+    container: 'view-selector-container'
+  });
+
+  // Render the view selector to the page.
+  viewSelector.execute();
+
+
+  /**
+   * Create a new DataChart instance with the given query parameters
+   * and Google chart options. It will be rendered inside an element
+   * with the id "chart-container".
+   */
+  var dataChart = new gapi.analytics.googleCharts.DataChart({
+    query: {
+      metrics: 'ga:sessions',
+      dimensions: 'ga:date',
+      'start-date': '30daysAgo',
+      'end-date': 'yesterday'
+    },
+    chart: {
+      container: 'chart-container',
+      type: 'LINE',
+      options: {
+        width: '100%'
       }
-    }).then(displayResults, console.error.bind(console));
-  }
+    }
+  });
 
-  function displayResults(response) {
-    var formattedJson = JSON.stringify(response.result, null, 2);
-    document.getElementById('query-output').value = formattedJson;
-  }
-    </script>
 
-    <!-- Load the JavaScript API client and Sign-in library. -->
-    <script src="https://apis.google.com/js/client:platform.js"></script>
+  /**
+   * Render the dataChart on the page whenever a new view is selected.
+   */
+  viewSelector.on('change', function(ids) {
+    dataChart.set({query: {ids: ids}}).execute();
+  });
 
-<!-- Info boxes 
-<section id="auth-button"></section>
-<section id="view-selector"></section>
-<section id="timeline"></section>
-    -->
-<!-- Step 2: Load the library. 
-<script src="~/Scripts/AdminLTE/googleApiAuth.js"></script>
+});
+</script>
+<body>
 
-<script src="~/Scripts/AdminLTE/analyticsDisplay.js"></script>
-    -->
+    <div id="embed-api-auth-container"></div>
+    <div id="chart-container"></div>
+    <div id="view-selector-container"></div>
+
 </body>
