added wraper for spacing

--- a/Praesidium/Praesidium/Views/Admin/Index.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/Index.cshtml
@@ -76,7 +76,8 @@ gapi.analytics.ready(function() {
 
 });
 </script>
-
+<div class="col-md-6">
     <div id="embed-api-auth-container"></div>
     <div id="chart-container"></div>
     <div id="view-selector-container"></div>
+    </div>
