--- a/Praesidium/Praesidium/Views/Admin/Index.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/Index.cshtml
@@ -9,6 +9,7 @@
     });
 }
 
+<body>
 <script>
 (function(w,d,s,g,js,fs){
   g=w.gapi||(w.gapi={});g.analytics={q:[],ready:function(f){this.q.push(f);}};
@@ -76,8 +77,9 @@ gapi.analytics.ready(function() {
 
 });
 </script>
-<div class="col-md-6">
+
     <div id="embed-api-auth-container"></div>
     <div id="chart-container"></div>
     <div id="view-selector-container"></div>
-    </div>
+
+</body>
