--- a/Praesidium/Praesidium/Views/Admin/Index.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/Index.cshtml
@@ -30,7 +30,7 @@ gapi.analytics.ready(function() {
    */
   gapi.analytics.auth.authorize({
     container: 'embed-api-auth-container',
-    clientid: 613515265029 - spkbodid2knrbh0c18930nt77db4aodp.apps.googleusercontent.com
+    clientid: '613515265029-spkbodid2knrbh0c18930nt77db4aodp.apps.googleusercontent.com'
   });
 
 
